Even edge slide, random switch of reference edge #48962

Closed
opened 2016-07-28 06:16:44 +02:00 by Nahuel Belich · 4 comments

Blender Version
Broken: a27acef

Short description of error
Selection switch of the reference edge on even edge slide using alt+mouse wheel scroll , jumps on to random edges insted one after the other

Exact steps for others to reproduce the error
1- edge slide even bug.blend
2- press G twice to start the slide on the selected edge
3- press E to turn on EVEN
4- press alt+mouse wheel scroll to change the reference edge
It should jump in a random order especially on the bottom three edges. That object its simply a subdivided plane and some moved edges.

**Blender Version** Broken: a27acef **Short description of error** Selection switch of the reference edge on even edge slide using alt+mouse wheel scroll , jumps on to random edges insted one after the other **Exact steps for others to reproduce the error** 1- [edge slide even bug.blend](https://archive.blender.org/developer/F328883/edge_slide_even_bug.blend) 2- press G twice to start the slide on the selected edge 3- press E to turn on EVEN 4- press alt+mouse wheel scroll to change the reference edge It should jump in a random order especially on the bottom three edges. That object its simply a subdivided plane and some moved edges.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

This issue was referenced by cba8e03672

This issue was referenced by cba8e03672e1f140193fa8bf3148fd5be3d44076

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48962
No description provided.