Fix T48962: Edge-slide, random edge switch order